# OpenGL-Space-Invaders

./: .clang-format  .gitignore  CMakeLists.txt
Engine/: CMakeLists.txt
Engine/cmake/: engine_deps.cmake
Engine/ext/glad/: CMakeLists.txt
Engine/ext/glad/include/glad/: glad.h
Engine/ext/glad/src/: glad.c
Engine/include/: Engine.h
Engine/src/: defs.h
Engine/src/Core/Application/: Application.cpp  Application.h
Engine/src/Core/Logger/: Logger.cpp  Logger.h
Engine/src/Core/Math/: MathTypes.h
Engine/src/IO/Model/: IModelParser.h
Engine/src/IO/Model/Types/: ModelTypes.h
Engine/src/Platform/Input/: Input.h  InputCodes.h  InputSystem.cpp  InputSystem.h
Engine/src/Platform/Window/: Window.cpp  Window.h
Engine/src/Renderer/: Renderer.cpp  Renderer.h
Engine/src/Renderer/Types/: Color.cpp  Color.h  ColorPresets.h
Engine/src/Scene/ECS/: IComponentArray.h  World.cpp  World.h
Engine/src/Scene/ECS/Components/: Components.h
Engine/src/Scene/ECS/Types/: SparseSet.h
Game/: CMakeLists.txt
Game/src/: Game.cpp  Game.h  main.cpp
Tests/: CMakeLists.txt
Tests/cmake/: test_deps.cmake
Tests/src/Engine/Renderer/Types/: ColorTests.cpp
Tests/src/Engine/Scene/: ECSTests.cpp
